fix options not visible on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -399,6 +399,7 @@ button[disabled] {
   .generator {
     flex-direction: column;
     max-height: unset;
+    height: unset;
     filter: none;
     border-radius: 0;
     border: none;
